fix: address PR review comments
- Remove unused HttpError import from client.test.ts
- Remove unnecessary return statement from void deactivate function
- Remove non-null assertion operator in refreshController by capturing sha in variable
- Cache Agent instance in GiteaHttpClient to avoid recreation on every call
- Clear secrets and variables in settingsTreeProvider when repository changes to prevent stale data
- Change HTTP method from PATCH to PUT for variable updates to match Gitea API spec

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "format": "prettier --check \"src/**/*.ts\" \"*.json\" \"*.md\"",
     "format:write": "prettier --write \"src/**/*.ts\" \"*.json\" \"*.md\"",
     "install:debug": "yarn build && code --install-extension dist/extension.vsix --force",
+    "uninstall:debug": "code --uninstall-extension bircni.gitea-vs-extension",
     "lint": "eslint .",
     "package": "vsce package --out dist/extension.vsix --no-yarn",
     "test": "jest --passWithNoTests",
