refactor: enhance code quality and consistency across multiple files

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,8 +4,14 @@
   "useTabs": false,
   "semi": true,
   "singleQuote": false,
+  "quoteProps": "as-needed",
   "trailingComma": "all",
   "bracketSpacing": true,
+  "bracketSameLine": false,
   "arrowParens": "always",
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "proseWrap": "preserve",
+  "htmlWhitespaceSensitivity": "css",
+  "embeddedLanguageFormatting": "auto",
+  "singleAttributePerLine": false
 }
