--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Gitea VS Extension",
   "description": "Gitea Actions status and logs in VS Code/Cursor.",
   "icon": "media/icon.png",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "publisher": "bircni",
   "license": "MIT",
   "packageManager": "yarn@4.12.0",
@@ -12,7 +12,7 @@
     "url": "https://github.com/bircni/gitea-vs-extension"
   },
   "engines": {
-    "vscode": "^1.108.0"
+    "vscode": "^1.105.0"
   },
   "categories": [
     "Other"
@@ -119,11 +119,6 @@
         },
         {
           "type": "tree",
-          "id": "bircni.gitea-vs-extension.notifications",
-          "name": "Notifications"
-        },
-        {
-          "type": "tree",
           "id": "bircni.gitea-vs-extension.runs",
           "name": "Workflow Runs"
         },
@@ -161,11 +156,6 @@
         "icon": "$(refresh)"
       },
       {
-        "command": "bircni.gitea-vs-extension.refreshNotifications",
-        "title": "gitea-vs-extension: Refresh Notifications",
-        "icon": "$(refresh)"
-      },
-      {
         "command": "bircni.gitea-vs-extension.viewJobLogs",
         "title": "gitea-vs-extension: View Job Logs",
         "icon": "$(list-unordered)"
@@ -184,11 +174,6 @@
         "command": "bircni.gitea-vs-extension.copyUrl",
         "title": "gitea-vs-extension: Copy URL",
         "icon": "$(copy)"
-      },
-      {
-        "command": "bircni.gitea-vs-extension.markNotificationRead",
-        "title": "gitea-vs-extension: Mark Notification Read",
-        "icon": "$(check)"
       },
       {
         "command": "bircni.gitea-vs-extension.refreshSecrets",
@@ -242,11 +227,6 @@
           "command": "bircni.gitea-vs-extension.refresh",
           "when": "view == bircni.gitea-vs-extension.runs || view == bircni.gitea-vs-extension.runsPinned || view == bircni.gitea-vs-extension.pullRequests",
           "group": "navigation"
-        },
-        {
-          "command": "bircni.gitea-vs-extension.refreshNotifications",
-          "when": "view == bircni.gitea-vs-extension.notifications",
-          "group": "navigation"
         }
       ],
       "view/item/context": [
@@ -286,19 +266,9 @@
           "group": "inline"
         },
         {
-          "command": "bircni.gitea-vs-extension.openInBrowser",
-          "when": "viewItem == giteaNotification",
-          "group": "inline"
-        },
-        {
           "command": "bircni.gitea-vs-extension.copyUrl",
           "when": "viewItem == giteaRepo || viewItem == giteaRun || viewItem == giteaJob || viewItem == giteaStep || viewItem == giteaPullRequest || viewItem == giteaArtifact",
           "group": "inline@2"
-        },
-        {
-          "command": "bircni.gitea-vs-extension.markNotificationRead",
-          "when": "viewItem == giteaNotification",
-          "group": "inline"
         },
         {
           "command": "bircni.gitea-vs-extension.openInBrowser",
@@ -359,24 +329,24 @@
     }
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.2",
-    "@tsconfig/node-lts": "^24.0.0",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^25.0.9",
-    "@types/vscode": "^1.108.1",
-    "@vscode/vsce": "^3.7.1",
-    "depcheck": "^1.4.7",
-    "esbuild": "^0.27.2",
-    "eslint": "^9.39.2",
-    "jest": "^30.2.0",
-    "jiti": "^2.6.1",
-    "prettier": "^3.8.0",
-    "rimraf": "^6.1.2",
-    "ts-jest": "^29.4.6",
-    "typescript": "^5.5.4",
-    "typescript-eslint": "^8.53.0"
+    "@eslint/js": "10.0.1",
+    "@tsconfig/node-lts": "24.0.0",
+    "@types/jest": "30.0.0",
+    "@types/node": "25.0.9",
+    "@types/vscode": "1.105.0",
+    "@vscode/vsce": "3.7.1",
+    "depcheck": "1.4.7",
+    "esbuild": "0.27.2",
+    "eslint": "10.0.0",
+    "jest": "30.2.0",
+    "jiti": "2.6.1",
+    "prettier": "3.8.1",
+    "rimraf": "6.1.3",
+    "ts-jest": "29.4.6",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.56.0"
   },
   "dependencies": {
-    "undici": "^7.18.2"
+    "undici": "7.22"
   }
 }
